k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
      - name: backend
        image: anr35/go-rest-api
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: 256Mi
            cpu: "1"
          limits:
            memory: 512Mi
            cpu: "2"
