k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:3.6
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: 256Mi
              cpu: "0.2"
            limits:
              memory: 512Mi
              cpu: "1"
