k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongodb
  template:
    metadata:
      labels:
        component: mongodb
    spec:
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
      containers:
        - name: mongodb
          image: mongo:3.6
          ports:
            - containerPort: 27017
#          volumeMounts:
#            - mountPath: /data/db
#              name: mongodb-storage
