k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.11-alpine3.17
          ports:
            - containerPort: 6379
#          resources:
#            requests:
#              memory: 256Mi
#              cpu: "0.2"
#            limits:
#              memory: 512Mi
#              cpu: "1"
