k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - anwararif.com
        - www.anwararif.com
  rules:
    - host: anwararif.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backend-cluster-ip-service
              port:
                number: 8000
    - host: www.anwararif.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-cluster-ip-service
                port:
                  number: 8000
